--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mugabo&nbsp;Andre&nbsp;Porfolio</title>
+    <title>Mugabo&nbsp;Andre&nbsp;|&nbsp;Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">Mugabo</div>
+        <ul class="nav-links">
+            <li><a href="#app">Home</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="theme-switch">
+            <label>
+                <input type="checkbox" name="" id="theme-toggle">
+                <span class="icon">
+                    <i class="fas fa-sun" id="theme-icon"></i>
+                </span>
+            </label>
+        </div>
+    </nav>
     <div id="app">
             <header>
-            <h1>Hi, I'm <span id="name"></span></h1>
-            <p id="title"></p>
-            <p id="about"></p>
-            <button>Contact Me</button>
 
-            <div class="theme-switch">
-                <label>
-                    <input type="checkbox" name="" id="theme-toggle">
-                    <span class="icon">
-                        <i class="fas fa-sun" id="theme-icon"></i>
-                    </span>
-                </label>
+            <div class="description">
+                <p id="title"></p>
+                <h1>Hi, I'm <span id="name"></span></h1>
+                <p id="about"></p>
+                <button>Contact Me</button>
             </div>
+            <div class="profileImage">
+                <img id="profile-pic" src="" alt="Profile Picture" loading="lazy" />
+            </div>    
+            
+
+            
         </header>
 
         <section id="skills">
@@ -45,6 +62,9 @@
             <div id="social-links"></div>
         </section>
     </div>
-    <script src="script.js"></script>        
+    <footer>
+        &copy; &nbsp;<span id="year"></span> Mugabo. All rights reserved.
+    </footer>
+    <script src="assets/js/script.js"></script>        
 </body>
 </html>
